Prevent large images from spilling off canvas.
omeka-s-modules/ImageAnnotate#1

--- a/asset/sass/_screen.scss
+++ b/asset/sass/_screen.scss
@@ -53,6 +53,10 @@ a img {
     vertical-align: bottom;
 }
 
+img {
+    max-width: 100%;
+}
+
 p a,
 span a {
     background-color: $primary-color;
